--- a/Cocoon/packages.config
+++ b/Cocoon/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="4.5.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.7.0" targetFramework="net472" />
+  <package id="Imagekit" version="5.0.0" targetFramework="net48" />
   <package id="jQuery" version="3.5.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
@@ -20,7 +21,9 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.8.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="6.8.0" targetFramework="net472" />
@@ -42,13 +45,26 @@
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="PushSharp" version="4.0.10" targetFramework="net472" />
+  <package id="QRCoder" version="1.6.0" targetFramework="net48" />
   <package id="Quartz" version="3.2.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.8.0" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net48" />
   <package id="System.Text.Encoding.CodePages" version="8.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
