--- a/Cocoon/G4Fit.csproj
+++ b/Cocoon/G4Fit.csproj
@@ -457,6 +457,10 @@
     <Compile Include="Migrations\202412101222221_location.Designer.cs">
       <DependentUpon>202412101222221_location.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202412101341370_ddddd.cs" />
+    <Compile Include="Migrations\202412101341370_ddddd.Designer.cs">
+      <DependentUpon>202412101341370_ddddd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Data\ApplicationDbContext.cs" />
     <Compile Include="Models\Domains\ApplicationUser.cs" />
@@ -1631,6 +1635,7 @@
     <Content Include="Content\web\G4Fit_Data\videos\10.mp4" />
     <Content Include="Content\web\G4Fit_Data\videos\11.mp4" />
     <Content Include="Content\web\G4Fit_Data\videos\12.mp4" />
+    <Content Include="Content\web\G4Fit_Data\videos\last.mp4" />
     <Content Include="Content\web\img\g4fitLogo-removebg.png" />
     <Content Include="Content\web\img\g4fitLogo.jpg" />
     <Content Include="Content\web\img\logo-removebg.png" />
@@ -1974,6 +1979,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202412101222221_location.resx">
       <DependentUpon>202412101222221_location.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202412101341370_ddddd.resx">
+      <DependentUpon>202412101341370_ddddd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\Website.ar.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
