--- a/Cocoon/G4Fit.csproj
+++ b/Cocoon/G4Fit.csproj
@@ -1964,6 +1964,7 @@
     <Content Include="Views\Users\CreateSubAdmin.cshtml" />
     <Content Include="Views\UserInBodyOperations\Index.cshtml" />
     <Content Include="Views\Users\ChangePassword.cshtml" />
+    <Content Include="Views\Account\ChangePassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
